# tanmatsu-meshcore

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
main/: CMakeLists.txt  device_settings.c  device_settings.h  idf_component.yml  lora_settings_handler.h  main.c
main/meshcore/: packet.c  packet.h
main/meshcore/chat/: grp_payload.h
main/meshcore/payload/: ack.c  ack.h  advert.c  advert.h  grp_txt.c  grp_txt.h  request.c  request.h
